--- a/styles.css
+++ b/styles.css
@@ -17,22 +17,32 @@
     padding: 14px 16px;
     text-decoration: none;
 }
-
-
-
-
-
-* {
-    box-sizing: border-box;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+    align-items: center;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
+.grid>article {
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
 }
 
-.column {
-    float: left;
-    width: 25%;
-    padding: 0 10px;
-    border: 10px, solid, black
+.grid>article img {
+    max-width: 100%;
+}
+
+}
+
+.text {
+    padding: 0 20px 20px;
+}
+
+.text>button {
+    background: gray;
+    border: 0;
+    color: white;
+    padding: 10px;
+    width: 100%;
 }
