--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,32 @@
     padding: 20px;
 }
 
+body {
+    font-family: 'Varela Round', sans-serif;
+}
+
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color:#212121;
+    text-decoration: none;
+    ;
 }
 
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    padding: 14px 16px;
+    font-style:inherit
+}
+
+.shares  {
+    float: left;
+    display: block;
+    color: #FFFFFF;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
 }
 
 .grid {
@@ -34,16 +48,12 @@
     max-width: 100%;
 }
 
+h2 {
+    font-family: 'Varela Round', sans-serif;
+    color: #00BCD4;
 }
 
 .text {
     padding: 0 20px 20px;
 }
 
-.text>button {
-    background: gray;
-    border: 0;
-    color: white;
-    padding: 10px;
-    width: 100%;
-}
