--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .header {
     background-color: #212121;
-    text-align: center;
     padding: 20px;
+    height: 10vh;
 }
 
 body {
@@ -15,6 +15,23 @@ body {
     ;
 }
 
+.user {
+    font-size: 2vh;
+    float: right;
+    display: block;
+    text-align: start;
+    color: #00BCD4;
+    padding-right: 4vw;
+    padding-bottom: 5vh;
+}
+
+.title {
+    float: right;
+    display: block;
+    text-align: start;
+    font-size: 5vh;
+    color: #FFFFFF;
+}
 .topnav a {
     float: left;
     display: block;
@@ -70,8 +87,6 @@ body {
 .profile {
 display: grid;
 grid-template-columns: 4fr 4fr;
-background: url("https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80");
-background-size: cover;
 grid-gap: 20px;
 padding: 10px;
 justify-content: first baseline;
@@ -80,13 +95,53 @@ align-self: center;
 align-items: start;
 }
 
+#profile1 {
+background: url("https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80");
+background-size: cover;
+}
+
+#profile2 {
+background: url("https://images.unsplash.com/photo-1559526323-cb2f2fe2591b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+background-size: cover;
+}
+
+#profile3 {
+background: url("https://images.unsplash.com/photo-1645830166230-187caf791b90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+background-size: cover;
+}
+
+#profile4 {
+background: url("https://images.unsplash.com/flagged/photo-1573583711764-219c65e5b328?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80");
+background-size: cover;
+}
+
+#profile5 {
+background: url("https://images.unsplash.com/photo-1529688530647-93a6e1916f5f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=736&q=80");
+background-size: cover;
+}
+
+#profile6 {
+background: url("https://images.unsplash.com/photo-1645378999488-63138abdecd2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+background-size: cover;
+}
+
+#profile7 {
+background: url("https://images.unsplash.com/photo-1649433658557-54cf58577c68?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80");
+background-size: cover;
+}
+
+#profile8 {
+background: url("https://images.unsplash.com/photo-1554774853-b415df9eeb92?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+background-size: cover;
+}
+
 .view-display {
-margin-left: 5vw;
+justify-content:center;
 margin-top: -1vh;
+padding-left: 2vw;
 }
 
 h2 {
-    font-family: 'Varela Round', sans-serif;
     color: #00BCD4;
 }
 
